@@ -54,6 +54,7 @@ def test_version(loghub):
     assert lines[0].startswith('devpi-client')
 
 
+@pytest.mark.skipif("sys.version_info < (3,)")
 def test_version_server(loghub, url_of_liveserver):
     from devpi.main import print_version
     loghub.debug = lambda self, *msg: None
